--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
@@ -21,9 +22,11 @@
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "react": "^18",
+    "react-animated-numbers": "^0.16.0",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
